{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 131,
  "lineage": "f326539b-c957-0303-582f-8c0e24cc984c",
  "resources": [
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-068f1c3d06bc8aaac",
            "domain": "vpc",
            "id": "eipalloc-0666d364c0f7a06c2",
            "network_interface": "eni-08db645ed75c6f8f4",
            "private_dns": "ip-172-16-0-88.eu-west-1.compute.internal",
            "private_ip": "172.16.0.88",
            "public_dns": "ec2-63-34-176-46.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.34.176.46",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.athena_gateway",
      "mode": "managed",
      "type": "aws_instance",
      "name": "DataGatewayInstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c841cc412b3474b1",
            "arn": "arn:aws:ec2:eu-west-1:848813598702:instance/i-0fbbb0f99f3fe2981",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbbb0f99f3fe2981",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "production_key_dimeo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ba74d1b9bd89faf",
            "private_dns": "ip-172-16-2-62.eu-west-1.compute.internal",
            "private_ip": "172.16.2.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a968c51a0a29c688",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d9d303c2b108642",
            "tags": {
              "Name": "Data Gateway"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d721af188abaad5"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "module.datalake_network.aws_security_group.DMZSecurityGroup",
            "module.datalake_network.aws_subnet.Subnet3",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.athena_gateway",
      "mode": "managed",
      "type": "aws_instance",
      "name": "JumpBoxInstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c841cc412b3474b1",
            "arn": "arn:aws:ec2:eu-west-1:848813598702:instance/i-0b20fe4d7e1f5d886",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b20fe4d7e1f5d886",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "production_key_dimeo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d3c3c3b43a56ed5",
            "private_dns": "ip-172-16-0-200.eu-west-1.compute.internal",
            "private_ip": "172.16.0.200",
            "public_dns": "ec2-34-245-34-203.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.34.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-002796a7c5d5a8a19",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c363aace6f91a91",
            "tags": {
              "Name": "Jump Box"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d721af188abaad5"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "module.datalake_network.aws_security_group.DMZSecurityGroup",
            "module.datalake_network.aws_subnet.Subnet1",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "InternetGateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01715fbcdb9b8f144",
            "owner_id": "848813598702",
            "tags": {
              "Name": "InternetGateway"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0666d364c0f7a06c2",
            "id": "nat-01a39bab92a9209cb",
            "network_interface_id": "eni-08db645ed75c6f8f4",
            "private_ip": "172.16.0.88",
            "public_ip": "63.34.176.46",
            "subnet_id": "subnet-02c363aace6f91a91",
            "tags": {
              "Name": "aws-datalake-nat"
            }
          },
          "dependencies": [
            "module.datalake_network.aws_eip.nat_eip",
            "module.datalake_network.aws_subnet.Subnet1",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NetworkAclSubnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-027b483bc1295dfdb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "848813598702",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-02c363aace6f91a91"
            ],
            "tags": {
              "Name": "NetworkAclSubnet1"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_subnet.Subnet1",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NetworkAclSubnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-025ee463cdd475a22",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "848813598702",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-001e033d06491e8e9"
            ],
            "tags": {
              "Name": "NetworkAclSubnet2"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_subnet.Subnet2",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NetworkAclSubnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e7ebb928585423ad",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "848813598702",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-02d9d303c2b108642"
            ],
            "tags": {
              "Name": "NetworkAclSubnet3"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_subnet.Subnet3",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NetworkAclSubnet4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03ee0cd1efa599085",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "848813598702",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-07e821c6fc88654c0"
            ],
            "tags": {
              "Name": "NetworkAclSubnet4"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_subnet.Subnet4",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "Route2InternetGateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01715fbcdb9b8f144",
            "id": "r-rtb-0e218e8041afb9e7f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e218e8041afb9e7f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.datalake_network.aws_internet_gateway.InternetGateway",
            "module.datalake_network.aws_route_table.PublicRouteTable",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "Route2NatGateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0556246d397af47261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-01a39bab92a9209cb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0556246d397af4726",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.datalake_network.aws_eip.nat_eip",
            "module.datalake_network.aws_nat_gateway.nat",
            "module.datalake_network.aws_route_table.PrivateRouteTable",
            "module.datalake_network.aws_subnet.Subnet1",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0556246d397af4726",
            "owner_id": "848813598702",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-01a39bab92a9209cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e218e8041afb9e7f",
            "owner_id": "848813598702",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01715fbcdb9b8f144",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRouteTableSubnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03375bd4b04a1d4e1",
            "route_table_id": "rtb-0556246d397af4726",
            "subnet_id": "subnet-02d9d303c2b108642"
          },
          "dependencies": [
            "module.datalake_network.aws_route_table.PrivateRouteTable",
            "module.datalake_network.aws_subnet.Subnet3",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRouteTableSubnet4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9d43b9a80c91739",
            "route_table_id": "rtb-0556246d397af4726",
            "subnet_id": "subnet-07e821c6fc88654c0"
          },
          "dependencies": [
            "module.datalake_network.aws_route_table.PrivateRouteTable",
            "module.datalake_network.aws_subnet.Subnet4",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRouteTableSubnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e7300e90a128974",
            "route_table_id": "rtb-0e218e8041afb9e7f",
            "subnet_id": "subnet-02c363aace6f91a91"
          },
          "dependencies": [
            "module.datalake_network.aws_route_table.PublicRouteTable",
            "module.datalake_network.aws_subnet.Subnet1",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRouteTableSubnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5435a92adadef2d",
            "route_table_id": "rtb-0e218e8041afb9e7f",
            "subnet_id": "subnet-001e033d06491e8e9"
          },
          "dependencies": [
            "module.datalake_network.aws_route_table.PublicRouteTable",
            "module.datalake_network.aws_subnet.Subnet2",
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DMZSecurityGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848813598702:security-group/sg-01d721af188abaad5",
            "description": "Allow RDP to access Jump Box from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d721af188abaad5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "DMZSecurityGroup",
            "name_prefix": null,
            "owner_id": "848813598702",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DMZSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DataGatewaySecurityGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848813598702:security-group/sg-09d553773a895b7a6",
            "description": "Allow RDP to Data Gateway from Jump Box",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d553773a895b7a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "DataGatewaySecurityGroup",
            "name_prefix": null,
            "owner_id": "848813598702",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DataGatewaySecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848813598702:subnet/subnet-02c363aace6f91a91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-02c363aace6f91a91",
            "map_public_ip_on_launch": true,
            "owner_id": "848813598702",
            "tags": {
              "Name": "Subnet 1 - Public"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848813598702:subnet/subnet-001e033d06491e8e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-001e033d06491e8e9",
            "map_public_ip_on_launch": true,
            "owner_id": "848813598702",
            "tags": {
              "Name": "Subnet 2 - Public"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848813598702:subnet/subnet-02d9d303c2b108642",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-02d9d303c2b108642",
            "map_public_ip_on_launch": false,
            "owner_id": "848813598702",
            "tags": {
              "Name": "Subnet 3 - Private"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848813598702:subnet/subnet-07e821c6fc88654c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-07e821c6fc88654c0",
            "map_public_ip_on_launch": false,
            "owner_id": "848813598702",
            "tags": {
              "Name": "Subnet 4 - Private"
            },
            "vpc_id": "vpc-05a33fb56a8aff656"
          },
          "dependencies": [
            "module.datalake_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.datalake_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:848813598702:vpc/vpc-05a33fb56a8aff656",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-02519149fddafb770",
            "default_route_table_id": "rtb-06934288d59b2b84e",
            "default_security_group_id": "sg-004dc477cf0104df4",
            "dhcp_options_id": "dopt-01301f67",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05a33fb56a8aff656",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06934288d59b2b84e",
            "owner_id": "848813598702",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}